# music_preference_elicitation

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.muqeval  Makefile  README.md  pyproject.toml  requirements.txt
configs/: muqeval_bridge_small.yaml  toy_major_minor.yaml  toy_major_minor_stochastic.yaml  toy_major_minor_stochastic_two_factor.yaml
scripts/: docker_build.sh  docker_build_muqeval.sh  docker_run_muqeval_bridge.sh  docker_run_toy.sh  run_muqeval_bridge.py  run_toy_pipeline.sh
src/: common.py
src/data/: make_synthetic_pairs.py
src/eval/: eval_pairwise.py  eval_rerank.py
src/models/: preference_model.py
src/train/: train_preference.py
src/users/: pseudo_user_major.py
