[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-pref-elicitation-toy"
version = "0.1.0"
description = "Minimal toy preference-learning and reranking pipeline for major-vs-minor music preferences"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
